build: create landing page

--- a/index.html
+++ b/index.html
@@ -22,49 +22,51 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <h1>My Favorite Gloves</h1>
+            <p>Howdy! My name is Ian and I enjoy working on baseball gloves perhaps a little more than I enjoy playing the actual game of baseball.</p>
             <button>Sign up</button>
         </div>
         <div class="hero-image">
-            <div class="image-placeholder">this is a placeholder for an image</div>
+            <img src="image1.png" alt="this is the hero image" class = "image-placeholder">
         </div>
     </section>
 
     <section class="info">
-        <h2>Some random information.</h2>
+        <h2>Every glove has a spot in the collection.</h2>
         <div class="info-container">
             <div class="info-box">
-                <div class="info-image"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <img src="image2.png" alt="this is the gamer." class = "info-image" >
+                <p>The glove I've used for the longest time.</p>
             </div>
             <div class="info-box">
-                <div class="info-image"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <img src="image3.png" alt="this is the pitcher." class = "info-image" >
+                <p>The glove I use whenever I'm on the mound(rarely).</p>
             </div>
             <div class="info-box">
-                <div class="info-image"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <img src="image4.png" alt="this is datdue." class = "info-image" >
+                <p>This is the DATDUDE Wilson A2K, my favorite glove of all time.</p>
             </div>
             <div class="info-box">
-                <div class="info-image"></div>
-                <p>this is some subtext under an illustration or image</p>
+                <img src="image5.png" alt="this is the rarest." class = "info-image" >
+                <p>This is the rarest glove, the Star-Spangled Banner. </p>
             </div>
         </div>
     </section>
 
     <section class="testimonial">
         <blockquote>
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it’s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <cite>-Thor, God of Thunder</cite>
+            <p>[Ian] may not have had the tools to go far in his baseball career but sure does have the tools, literally and figuratively, to make other players the best version of themselves on the field and in the classroom.</p>
+            <cite>-Opposing head baseball coach</cite>
         </blockquote>
     </section>
 
     <section class="cta">
         <div class="cta-container">
-            <h3>Call to action! It’s time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+            <div class="cta-text">
+                <h3>Call to action! It’s time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="right-quarter-button">Sign up</button>
         </div>
     </section>
 
